Merge oshi-core-java11 into oshi-core; add module descriptor and redirection pom